@@ -17,6 +17,7 @@ Bugfixes:
  - GBA Memory: Fix copy-on-write memory leak
  - Core: Fix ROM patches not being unloaded when disabled (fixes mgba.io/i/962)
  - GBA I/O: Fix writing to DISPCNT CGB flag (fixes mgba.io/i/902)
+ - GBA Memory: Partially revert prefetch changes (fixes mgba.io/i/840)
 Misc:
  - GBA: Improve multiboot image detection
  - GB MBC: Remove erroneous bank 0 wrapping
